# service

./: .gitignore
.github/workflows/: niceice-app.yml  resume.yml
backend/account_management/: CMakeLists.txt
backend/account_management/docs/: account_management._design.md
backend/account_management/include/: const.hpp
backend/account_management/src/: main.cpp
backend/docs/: send_mail.lua  send_mail.py
cicd/: aliyun_secret.yaml
cicd/niceice/: k3s.yaml
frontend/niceice/: dockerfile
frontend/niceice/app/: .gitignore  pubspec.yaml
frontend/niceice/app/android/: build.gradle
frontend/niceice/app/assets/configs/: config.yaml  error-prompt.yaml
frontend/niceice/app/ios/Flutter/: .last_build_id
frontend/niceice/app/ios/Runner.xcodeproj/: project.pbxproj
frontend/niceice/app/lib/: app.dart  main.dart
frontend/niceice/app/lib/common/: bloc_observer.dart  common.dart  constant.dart  util.dart
frontend/niceice/app/lib/common/bloc/: bloc_observer.dart
frontend/niceice/app/lib/common/theme/: login_logo.dart  theme.dart
frontend/niceice/app/lib/configs/: config.yaml
frontend/niceice/app/test/: widget_test.dart
frontend/niceice/cert/: 1_niceice.cn_bundle.crt  2_niceice.cn.key
frontend/niceice/design/: niceice-app-design.md
frontend/niceice/k8s/: deployment.yaml  kustomization.yaml  niceice-ingress-secret.yaml  niceice-web-ingress.yaml  service.yaml
frontend/resume/: dockerfile  resume.html
frontend/resume/docker/: default.conf
frontend/resume/k8s/: deployment.yaml  service.yaml
rule/: port_assign.md
(+24 files in other folders)
